User login api, facebook and email.

--- a/src/main/webapp/WEB-INF/config.json
+++ b/src/main/webapp/WEB-INF/config.json
@@ -1,6 +1,6 @@
 {
 	"global": {
-		"languages": "zh,en",
+		"languages": "zh/en",
 		"httpProtocol": "http",
 		"domain": "localhost:8080",
 		"validity": 600
