--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <version>${hibernate.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.directwebremoting</groupId>
+      <artifactId>dwr</artifactId>
+      <version>3.0.2-RELEASE</version>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
       <version>${fasterxml.jackson.version}</version>
@@ -108,9 +113,9 @@
       <version>1.5.0-b01</version>
     </dependency>
     <dependency>
-      <groupId>org.directwebremoting</groupId>
-      <artifactId>dwr</artifactId>
-      <version>3.0.2-RELEASE</version>
+      <groupId>com.mashape.unirest</groupId>
+      <artifactId>unirest-java</artifactId>
+      <version>1.4.9</version>
     </dependency>
   </dependencies>
   <build>
