Get favorite message list; update REST API document.

--- a/src/main/webapp/WEB-INF/hibernate.properties
+++ b/src/main/webapp/WEB-INF/hibernate.properties
@@ -3,6 +3,6 @@ hibernate.hbm2ddl.auto=update
 hibernate.show_sql=false
 hibernate.format_sql=true
 # Database connection
-db.url=jdbc:mysql://s1.mushare.cn:3306/tsukuba?useUnicode=true&characterEncoding=UTF-8
+db.url=jdbc:mysql://s1.mushare.cn:3306/tsukuba?useUnicode=true&characterEncoding=UTF-8&useSSL=false
 db.username=www
 db.password=
